--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-react-app"/>
-  
+    <meta name="keyword" content="Department of Mathematics, Maths, CUSAT, Maths" />
+    <meta name="description" content="Official Website of Department of Mathematics, CUSAT"/>
+    <meta name="author" content="Rohith, Sachin" />
     
     <title>Dept of mathematics</title>
+    <link rel="icon" href="cusat_logo.png"/>
 
   </head>
   <body>
