--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,22 @@
     <title>Dept of mathematics</title>
     <link rel="icon" href="cusat_logo.png"/>
 
+<!-- 
+    <link rel="stylesheet" href="./vendor.min.css">
+    <link rel="stylesheet" href="./plugins.min.css">
+    <link rel="stylesheet" href="./style.min.css"> -->
+
   </head>
   <body>
     
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- <script src="./vendor.min.js"></script>
+    <script src="./plugins.min.js"></script> -->
+
+   <!-- Main JS-->
+    <!-- <script src="./main.js"></script> -->
 
   </body>
 </html>
