Latest working commit

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keyword" content="Department of Mathematics, Maths, CUSAT, Maths" />
     <meta name="description" content="Official Website of Department of Mathematics, CUSAT"/>
-    <meta name="author" content="Rohith, Sachin" />
+    <meta name="author" content="Rohith" />
     
     <title>Dept of mathematics</title>
     <link rel="icon" href="cusat_logo.png"/>
-
-<!-- 
-    <link rel="stylesheet" href="./vendor.min.css">
-    <link rel="stylesheet" href="./plugins.min.css">
-    <link rel="stylesheet" href="./style.min.css"> -->
+    
 
   </head>
   <body>
@@ -21,11 +17,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <!-- <script src="./vendor.min.js"></script>
-    <script src="./plugins.min.js"></script> -->
-
-   <!-- Main JS-->
-    <!-- <script src="./main.js"></script> -->
 
   </body>
 </html>
